fixed footer jumping

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,11 @@
 }
 body {
   font-family: "Arima Madurai", cursive;
-  /* color: #550475; */
-  /* color: rgb(255, 255, 255); */
+}
+
+.root,
+.app {
+  height: 100%;
 }
 
 /* width */
